# VulkanCMakeStarter

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: checkGLFW.cpp  checkGLM.cpp  checkGLMVulkan.cpp  checkVulkan.cpp  main.cpp
